# SODA---System-Offload-Dynamics-Analyzer

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Home\Users\syeda\Downloads  LICENSE  NOTICE  README.md  docker-compose.yml  docker-entrypoint.sh  env.sh  pyproject.toml  requirements.txt  verify_parallelism.sh
examples/: .__afs04E9  .__afs4B11  microbench_example.sh  microbench_simple.sh  microbench_sweep.py  quickstart.sh  sbatch.sh  soda_example.py  soda_example.sh  soda_simple.py  soda_simple.sh  soda_sweep.py
experiments/: diagnose_negative_tax.py
experiments/rebuttal/: ct_standalone_microbench.py  ct_validation_microbench.py  moe_fragmentation_analysis.py  optimization_comparison.py  validate_ct.py
experiments/rebuttal/slurm/: sbatch_ct_standalone.sh  sbatch_ct_validation.sh  sbatch_moe_fragmentation_reviewer_d.sh  validate_delta_ct.sh
experiments/sweep/: config.py  hdbi.py  microbench_sweep.py  plot_sweep.py  soda_hsb_sweep.py  soda_sweep.py  summarize_hsb_sweep.py  summarize_soda_sweep.py  summarize_sweep.py
requirements/: py3.13.5_cu12.3_tesla_t4.txt
slurm/: run_tests.sh  sbatch_moe_shared_expert_template.sh  sbatch_template.sh
soda/: .cli.py.swp
soda.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
soda/common/: constants.py  exceptions.py
src/: __init__.py  data.py  soda.py  soda_microbench.py  utils.py
src/common/: data.py  print_utils.py  utils.py
src/microbench/: __init__.py  microbench.py  run_suite.sh
src/microbench/baremetal/: CMakeLists.txt  __init__.py  generate.py  main_gemm_bm.cpp  nsys_utils.py  profile.py  report.py  run_baremetal.sh  search.py  utils.py
src/microbench/baremetal/scripts/: compare_kernel_tax.py  gen_bm_jobs.py  profile_baremetal.py  run_bm_suite.py  search_algorithm_indices.py
src/microbench/framework/: __init__.py
src/microbench/framework/pytorch/: models.py  plot.py  profile.py  replay.py  run_pytorch.sh  verify.py
src/microbench/framework/pytorch/scripts/: extract_kernel_chains.py  extract_kernel_sequences.py  microbench.py  plot_kernel_tax.py  replay_kernel_chains.py  replay_kernel_sequences.py  verify_replayed_kernels.py
src/soda/: __init__.py  __main__.py  carbon.py  kerneldb.py  main.py  ncu.py  power_sampler.py  roofline.py  util.py  version.py
src/soda/common/: __init__.py  data.py  print_utils.py  summary_report.py  utils.py
src/soda/microbench/: __init__.py  microbench.py
src/soda/microbench/baremetal/: CMakeLists.txt  __init__.py  generate.py  main_gemm_bm.cpp  profile.py  report.py  search.py  utils.py
src/soda/microbench/framework/: __init__.py
src/soda/microbench/framework/pytorch/: __init__.py  plot.py  profile.py  verify.py
src/soda/moe/: __init__.py  arch_diagram.py  cupti_profiler.py  detect.py  module_classifier.py  ncu_bridge.py  nvbit_parser.py  nvbit_profiler.py  op_profile.py  pipeline.py  prompts.py  report.py  routing_analysis.py  routing_capture.py
src/soda/moe/nvbit_tool/: Makefile  common.h  inject_funcs.cu  mem_reuse_tracker.cu
src/soda/moe/nvbit_tool/nvbit_release_x86_64/core/: cuda.h  generated_cuda_meta.h  instr_types.h  nvbit.h  nvbit_reg_rw.h  nvbit_tool.h  tools_cuda_api_meta.h
src/soda/moe/nvbit_tool/nvbit_release_x86_64/core/utils/: channel.hpp  utils.h
src/soda/moe/nvbit_tool/tool_func/: flush_channel.cu
src/soda/taxbreak/: __init__.py  global_cache.py  kernel_power_replay.py  nsys_replay.py  null_kernel.py  pipeline.py  replay_cache_tools.py  report.py
tests/: __init__.py  conftest.py  test_carbon.py  test_data.py  test_kerneldb.py  test_multi_gpu.py  test_parallelism.py  test_roofline.py  test_summary_report.py  test_utils.py
