[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soda-profiler"
version = "0.1.0"
description = "SODA: System-Offload-Dynamics-Analyzer for PyTorch models."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "accelerate==1.9.0",
    "matplotlib==3.9.2",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "torch==2.7.1",
    "transformers==4.51.0",
]

[project.scripts]
soda = "soda.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]