[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soda"
version = "0.1.0"
description = "System-Offload-Dynamics-Analyzer (SODA): analyze CPU–GPU dynamics of PyTorch models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SODA Developers" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux"
]
dependencies = [
  # Installed via pip in slurm_run.sh
  "transformers",
  "accelerate",
  "vllm",
  "flashinfer-python",
  # NOTE: PyTorch + CUDA are installed via conda:
  # pytorch==2.4.1 torchvision==0.19.1 torchaudio==2.4.1 pytorch-cuda=12.1
]

[project.urls]
Homepage = "https://github.com/prabsy96/soda"
Repository = "https://github.com/prabsy96/soda"

[project.scripts]
soda-cli = "soda.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]