[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soda"
version = "0.1.0"
description = "System Offload Dynamics Analyzer (SODA): analyze CPU–GPU dynamics of PyTorch models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0 with additional terms" }
authors = [{ name = "Prabhu Vellaisamy" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux"
]
dependencies = [
  "accelerate>=1.3.0",
  "matplotlib",
  "numpy",
  "rich",
  "torch>=2.6.0",
  "transformers>=4.53.0",
]

[project.urls]
Homepage = "https://github.com/prabsy96/SODA---System-Offload-Dynamics-Analyzer"
Repository = "https://github.com/prabsy96/SODA---System-Offload-Dynamics-Analyzer"

[project.scripts]
soda-cli = "soda:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Run with: PYTHONPATH=src python3.13 -m pytest tests/
# (Python 3.11+ required; login node has Python 3.9 which lacks str|Path unions)
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"
